force-app/main/default/objects/PartyRoleRelation/fields/EDUtb_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Display_Name__c</fullName>
    <description>Friendly Display Name for the Flow &quot;Screen - Guided Relationship Creation&quot;

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <formula>RoleName + &quot; to &quot; +  RelatedRoleName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>