force-app/main/default/objects/PartyRoleRelation/fields/Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Type__c</fullName>
    <description>When this field is populated it will automatically pass the selected value down to the related CCR or AAR.

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <inlineHelpText>When this field is populated it will automatically pass the selected value down to the related CCR or AAR upon creation.</inlineHelpText>
    <label>Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Peer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>